# hyprland-window-switcher

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  dispatcher.rs  main.rs
