[package]
name = "hyprland-window-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.15", features = ["derive"] }
hyprland = "0.3.8"
itertools = "0.11.0"
rofi = "0.3.0"
